fix sidebar broken by new tab icon spacing

--- a/theme.css
+++ b/theme.css
@@ -1464,6 +1464,9 @@ body.pln-link-mods .external-link {
     & .workspace-tab-header-container-inner {
         flex-wrap: wrap;
         -webkit-app-region: no-drag;
+    }
+    /* Move the tabs over with padding to make room for new tab icon */
+    & .mod-root .workspace-tab-header-container-inner {
         padding-right: 50px;
     }
 
